--- a/launcher.conf.example
+++ b/launcher.conf.example
@@ -1,5 +1,6 @@
 
 logfile         = 'logfile'
+debug           = 'True'
 mqtt_broker     = 'localhost'       # default: 'localhost'. If using TLS, this must be set to the domain name signed by your TLS certificate.
 mqtt_port       = 1883              # default: 1883
 mqtt_clientid   = 'mqtt-launcher-1'
@@ -8,7 +9,9 @@ mqtt_password   = None
 mqtt_tls        = None              # default: No TLS
 mqtt_tls_verify = None              # Configure verification of the server hostname in the server certificate, None means to not vorifying Hostname and should not be used in production
 mqtt_transport_type = 'tcp'         # alternative: 'websocket', default: 'tcp'
+mqtt_qos        = 0                 # alternative: '0','1','2', default: '2'
 
+client_topic    = mqtt-launcher     # Topic where the client posts messages (default: 'clients/mqtt-launcher')
 topiclist = {
 
     # topic                     payload value       program & arguments
