--- a/launcher.conf.example
+++ b/launcher.conf.example
@@ -1,40 +1,45 @@
+[LOG]
+logfile         = logfile
+debug           = True
 
-logfile         = 'logfile'
-debug           = 'True'
-mqtt_broker     = 'localhost'       # default: 'localhost'. If using TLS, this must be set to the domain name signed by your TLS certificate.
-mqtt_port       = 1883              # default: 1883
-mqtt_clientid   = 'mqtt-launcher-1'
+
+[MQTT_BROKER]
+mqtt_broker     = localhost         # default: 'localhost'. If using TLS, this must be set to the domain name signed by your TLS certificate.
+mqtt_port       = 1883              # default: '1883'
+mqtt_clientid   = mqtt-launcher-1
 mqtt_username   = None
 mqtt_password   = None
-mqtt_tls        = None              # default: No TLS
-mqtt_tls_verify = None              # Configure verification of the server hostname in the server certificate, None means to not vorifying Hostname and should not be used in production
-mqtt_transport_type = 'tcp'         # alternative: 'websocket', default: 'tcp'
+mqtt_tls        = False             # default: No TLS
+mqtt_tls_verify = True              # Configure verification of the server hostname in the server certificate, False means to not vorifying Hostname and should not be used in production
+mqtt_transport_type = tcp           # alternative: 'websocket', default: 'tcp'
 mqtt_qos        = 0                 # alternative: '0','1','2', default: '2'
 
+
+
+[MQTT_TOPICS]
 client_topic    = mqtt-launcher     # Topic where the client posts messages (default: 'clients/mqtt-launcher')
 topiclist = {
-
-    # topic                     payload value       program & arguments
+    #   topic                   :       payload value   :     program & arguments
     "sys/file"          :   {
-                                'create'        :   [ '/usr/bin/touch', '/tmp/file.one' ],
-                                'false'         :   [ '/bin/rm', '-f', '/tmp/file.one'    ],
-                                'info'          :   [ '/bin/ls', '-l', '/tmp/file.one' ],
+                                "create"        :   [ "/usr/bin/touch", "/tmp/file.one" ],
+                                "false"         :   [ "/bin/rm", "-f", "/tmp/file.one"    ],
+                                "info"          :   [ "/bin/ls", "-l", "/tmp/file.one" ]
                             },
     "prog/pwd"          :   {
-                                None            :   [ 'pwd' ],
+                                "None"            :   [ "pwd" ]
                             },
     "dev/1"             :   {
-                                None            :   [ 'ls', '-l', '/' ],
+                                "None"            :   [ "ls", "-l", "/" ]
                             },
     "dev/2"             :   {
-                                None            :   [ "/bin/echo", "111", "*", "@!@", "222", "@!@", "333" ],
+                                "None"            :   [ "/bin/echo", "111", "*", "@!@", "222", "@!@", "333" ]
                             },
     "dev/3"             :   {
-                                None            :   [ "/bin/sh", '-c', 'var=@!@; echo $var'],
+                                "None"            :   [ "/bin/sh", "-c", "var=@!@; echo $var"]
                             },
     "dev/4"             :   {
-                                None            :   [ "/bin/bash", 
-                                                      '-c',
-                                                      'IFS="/" read -r var1 var2 <<< "@!@"; echo "var1=$var1 var2=$var2"'],
-                            },
-}
+                                "None"            :   [ "/bin/bash", 
+                                                      "-c",
+                                                      "IFS=\"/\" read -r var1 var2 <<< \"@!@\"; echo \"var1=$var1 var2=$var2\""]
+                            }
+ }
